# ctx-fryer

./: CHANGELOG  INSTALL  Makefile  Makefile.am  Makefile.inc  README  README.md  TODO  autogen.sh  build.sh  changelog.sh  configure.ac
doc/: Makefile.am  changelog.txt  devel_guide.txt  ftp.sh  index.txt  news.txt
doc/images/: ctx-fryer.xcf
doc/scripts/: ctx-fryer.js
doc/styles/: ctx-fryer-toc.css  ctx-fryer.css
examples/: Expression_Term_Factor.grammar  LR0.grammar  Makefile.am  Structural_language_prototype.grammar  includes_test.grammar
examples/Expression_Factor_Term/: Expression_Factor_Term.cfg  Makefile  Makefile.config.in  README.1st  calc.c  calc.sh  xattr.c
rt/: Makefile.am
rt/C/: autogen.sh  configure.ac
rt/C/include/: Makefile.am  Makefile.in  attribute.h  buffer.h  config.h.in  objpack.h  objpool.h  token.h
rt/C/src/: Makefile.am  Makefile.in  buffer.c  objpack.c  ptree.c  srcfile.c
rt/C/unit_test/: Makefile.am  Makefile.in  test.lexical_analyser.c  test.lexical_analyser.input  test.lexical_items.h  test.syntax_analyser.c  test.syntax_analyser.output
src/: Makefile.am
src/CXX/: Makefile.am
src/CXX/container/: Makefile.am  heap.hxx  queue.hxx  stack.hxx  table.hpp  table.hxx  trie.hxx  value_list.hpp  value_list.hxx
src/CXX/dynamic/: Makefile.am  mempool.cxx  mempool.hxx  pointer.hxx
src/CXX/meta/: Makefile.am  bit_info.hxx  postpone.hxx  static_array.hxx  type_list.hpp  type_list.hxx
src/CXX/mt/: Makefile.am  atomic.hxx  barrier.hxx  condition.hxx  mutex.hxx  rwlock.hxx  semaphore.hxx  thread.hxx
src/CXX/proc/: Makefile.am  daemon.cxx  daemon.hxx  log.cxx  log.hxx
src/CXX/stats/: Makefile.am  avg.hxx
src/CXX/sys/: Makefile.am  time.cxx  time.hxx
src/CXX/unit_test/: Makefile.am
src/CXX/unit_test/container/: Makefile.am  binomial_heap.cxx  binomial_heap.sh  randnums.cxx  table.cpp  table.cxx  table.sh  trie.cxx  value_list.cpp  value_list.cxx  value_list.sh
src/CXX/unit_test/dynamic/: Makefile.am  mempool.cxx  mempool.sh  pointer.cxx  pointer.sh
src/CXX/unit_test/meta/: Makefile.am  bit_info.cxx  bit_info.sh  static_array.cxx  static_array.sh
src/CXX/unit_test/mt/: Makefile.am  tpool.cxx  tpool.sh
src/CXX/unit_test/proc/: Makefile.am  daemon.cxx  daemon.sh  log.cxx  log.sh
src/Perl/: COPYING  MANIFEST  Makefile.PL  ctx-fryer-cfg2parser  ctx-fryer-cfg2re  ctx-fryer-cfg2tlang  ctx-fryer-cfg2tlang-conf  ctx-fryer-cfg2ut  ctx-fryer-re2fsa
src/Perl/lib/: CTXFryer.pm
src/Perl/lib/CTXFryer/: Base.pm  FSA.pm  Grammar.pm  Identified.pm  LRParser.pm  List.pm  Logging.pm  Options.pm  PDA.pm  ProjectDef.pm  Serialised.pm  Signed.pm  Table.pm
src/Perl/lib/CTXFryer/FSA/: Branch.pm  Regex.pm  State.pm  Symbol.pm
src/Perl/lib/CTXFryer/Grammar/: Component.pm  Item.pm  ItemSet.pm  NonTerminal.pm  Rule.pm  Symbol.pm  Terminal.pm
src/Perl/lib/CTXFryer/LRParser/: Action.pm  Output.pm  Reduction.pm  State.pm  Transition.pm
src/Perl/lib/CTXFryer/Math/: Base.pm  Boolean.pm  Couple.pm  Digraph.pm  Function.pm  Multiplet.pm  Relation.pm  Set.pm
src/Perl/lib/CTXFryer/PDA/: Input.pm  Stack.pm  State.pm
src/Perl/lib/CTXFryer/ProjectDef/: MetaInfo.pm  UnitTest.pm
src/Perl/lib/CTXFryer/Table/: Iterator.pm
src/Shell/: Makefile.am  ctx-fryer  ctx-fryer-logging.sh  ctx-fryer-paths.sh.in  ctx-fryer-project.sh  logging.sh  paths.sh
src/XML/: Makefile.am  fsa2c.xml  fsa2h.xml  lrparser2c.xml  lrparser2extern_attr_h.xml  lrparser2h.xml  lrparser_includes2dot.xml  lrparser_reads2dot.xml  lrparser_trans2dot.xml
src/perl/: grammar2lrparser.pl  grammar2regex.pl  grammar2tlang.pl  grammar2ut.pl  regex2fsa.pl
src/perl/lib/: Base.pm  CTXFryer.pm  FSA.pm  Grammar.pm  Identified.pm  LRParser.pm  List.pm  Logging.pm  Options.pm  PDA.pm  ProjectDef.pm  Serialised.pm  Signed.pm  Table.pm
src/perl/lib/FSA/: Branch.pm  Regex.pm  State.pm  Symbol.pm
src/perl/lib/FSA/Symbol/: ASCII.pm  Interval.pm  Set.pm
src/perl/lib/Grammar/: Component.pm  Item.pm  ItemSet.pm  NonTerminal.pm  Rule.pm  Symbol.pm  Terminal.pm
src/perl/lib/Grammar/Symbol/: Attribute.pm
src/perl/lib/Grammar/Terminal/: EOF.pm
src/perl/lib/LRParser/: Action.pm  Output.pm  Reduction.pm  State.pm  Transition.pm
src/perl/lib/LRParser/Action/: Accept.pm  (+2 more)
src/perl/lib/Math/: Base.pm  Boolean.pm  Couple.pm  Digraph.pm  Function.pm  Multiplet.pm  Relation.pm  Set.pm
src/perl/lib/PDA/: Input.pm  Stack.pm  State.pm
src/perl/lib/ProjectDef/: MetaInfo.pm  UnitTest.pm
src/perl/lib/Table/: Iterator.pm
src/sh/: command.sh  create_project.sh  ctxfryer.sh
src/xml/: fsa.dtd  fsa2dot.xml  lrparser2extern_attr_h.xml  lrparser2latex.xml  lrparser_lookback2dot.xml
tlang/: Makefile  Makefile.am
tlang/C/: Makefile.am  Makefile.xslt.in  autogen.sh  configure.ac  fsa_table.h  parser.c  parser.h  parser_tables.h  prepare.sh
tlang/C/include/: ptree_types.h  syntax_analyser.h
tlang/C/project/: Makefile.am  parser.h
tlang/C/project/lexical_analyser/: Makefile.am  fsa_table.h
tlang/C/project/syntax_analyser/: Makefile.am
tlang/C/project/unit_test/: Makefile.am
tlang/C/src/: Makefile.am  attribute.c  syntax_analyser.c  token.c
tlang/C/unit_test/: Makefile.am  test.c  test.lexical_analyser.c  test.nonterminals.h  test.sh
tlang/c/: autogen.sh
tlang/c/include/: Makefile.am  attribute.h  buffer.h  builtin_attr.h  fsa.h  grammar.h  lexical_analyser.h  objpack.h  objpool.h  ptree.h  ptree_types.h  srcfile.h  stack.h  syntax_analyser.h  test.h  token.h
tlang/c/project/: Makefile.am  configure.ac  parser.c
tlang/c/project/syntax_analyser/: parser_tables.h
tlang/c/project/unit_test/: test.c
tlang/c/src/: attribute.c  buffer.c  builtin_attr.c  lexical_analyser.c  objpack.c  objpool.c  ptree.c  srcfile.c  stack.c  syntax_analyser.c  test.c  token.c
tlang/c/unit_test/: Makefile.am  test.extern_attr.c  test.extern_attr.h  test.fsa_table.c  test.fsa_table.h  test.lexical_analyser.c  test.lexical_analyser.output  test.lexical_items.h  test.nonterminals.h  test.parser_tables.c  test.parser_tables.h  test.sh  test.srcfile.c  test.syntax_analyser.c  test.syntax_analyser.input
(+40 files in other folders)
