examplesdir   = $(pkgdatadir)/examples
exampleEFTdir = $(examplesdir)/Expression_Factor_Term

examples_DATA = \
    includes_test.cfg \
    LR0.cfg \
    Structural_language_prototype.cfg

exampleEFT_DATA = \
    Expression_Factor_Term/calc.c \
    Expression_Factor_Term/Expression_Factor_Term.cfg \
    Expression_Factor_Term/Makefile \
    Expression_Factor_Term/Makefile.config \
    Expression_Factor_Term/README.1st \
    Expression_Factor_Term/xattr.c

exampleEFT_SCRIPTS = \
    Expression_Factor_Term/calc.sh
