# Target languages parser project templates
pkgtlangdir = $(pkgdatadir)/tlang

# C code
Ctlangdir   = $(pkgtlangdir)/C
Ctlang_DATA = \
    C/prepare.sh \
    C/configure.ac \
    C/Makefile.am \
    C/Makefile.xslt \
    C/fsa_table.h \
    C/parser.c \
    C/parser.h \
    C/parser_tables.h

# C code unit test
Ctlangutdir   = $(Ctlangdir)/unit_test
Ctlangut_DATA = \
    C/unit_test/Makefile.am \
    C/unit_test/test.c

Ctlangut_SCRIPTS = \
    C/unit_test/test.sh
