SUBDIRS = \
    meta \
    dynamic \
    container \
    mt \
    proc \
    stats \
    sys \
    unit_test


# Internal headers
noinst_HEADERS = \
    config.hxx

lib_LTLIBRARIES = \
    libctx-fryer.la

libctx_fryer_la_SOURCES =

libctx_fryer_la_LIBADD = \
    dynamic/libdynamic.la \
    proc/libproc.la
