xmldir = $(pkgdatadir)/XML

xml_DATA = \
    fsa2c.xml \
    fsa2dot.xml \
    fsa2h.xml \
    fsa.dtd \
    lrparser2c.xml \
    lrparser2extern_attr_h.xml \
    lrparser2h.xml \
    lrparser2latex.xml \
    lrparser_includes2dot.xml \
    lrparser_lookback2dot.xml \
    lrparser_reads2dot.xml \
    lrparser_trans2dot.xml
