# Parser run-time support headers
pkginclude_HEADERS = \
    attribute.h \
    buffer.h \
    builtin_attr.h \
    fsa.h \
    grammar.h \
    lexical_analyser.h \
    objpack.h \
    objpool.h \
    ptree.h \
    ptree_types.h \
    srcfile.h \
    stack.h \
    syntax_analyser.h \
    test.h \
    token.h


# Internal headers
noinst_HEADERS = \
    config.h
