# Compiler & linker flags
AM_CXXFLAGS = -g -Wall -Werror
AM_LDFLAGS  =

# Unit test scripts
TESTS = \
    value_list.sh \
    table.sh \
    binomial_heap.sh


# Unit test programs
check_PROGRAMS = \
    value_list \
    table \
    randnums \
    binomial_heap

value_list_SOURCES = \
    value_list.cxx

table_SOURCES = \
    table.cxx

randnums_SOURCES = \
    randnums.cxx

binomial_heap_SOURCES = \
    binomial_heap.cxx
