# Compiler & linker flags
AM_CXXFLAGS = -g -Wall -Werror -O0
AM_LDFLAGS  =

# Unit test scripts
TESTS = \
    value_list.sh \
    table.sh \
    binomial_heap.sh \
    trie.sh


# Unit test programs
check_PROGRAMS = \
    binomial_heap \
    randnums \
    table \
    trie \
    value_list

binomial_heap_SOURCES = \
    binomial_heap.cxx

randnums_SOURCES = \
    randnums.cxx

table_SOURCES = \
    table.cxx

trie_SOURCES = \
    trie.cxx

value_list_SOURCES = \
    value_list.cxx
