# Compiler & linker flags
AM_CXXFLAGS = -g -Wall -Werror
AM_LDFLAGS  =

# Unit test scripts
TESTS = \
    static_array.sh \
    bit_info.sh


# Unit test programs
check_PROGRAMS = \
    bit_info \
    static_array

bit_info_SOURCES = \
    bit_info.cxx

static_array_SOURCES = \
    static_array.cxx
